[package]
name = "sony-battery-led"
license = "GPL-2.0-only"
authors = ["Michael Gruenewald <mail@michaelgruenewald.eu>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.59"
async-std = { version = "1.12.0", features = ["attributes"] }
glob = "0.3.0"
palette = "0.6.0"
zbus = "2.3.2"

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = true }
