[package]
name = "sony-battery-led"
description = "Sony Game Controller Battery LED Updater"
license = "GPL-2.0-only"
authors = ["Michael Gruenewald <mail@michaelgruenewald.eu>"]
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.59"
async-std = { version = "1.12.0", features = ["attributes"] }
glob = "0.3.0"
palette = "0.7.0"
zbus = "4.4.0"

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = true }
